[package]
name = "FAMLI3"
version = "3.0.0-pre4"
authors = ["Jonathan Golob <j-dev@golob.org>"]

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
csv = "1.3.0"  # Adjust the version as needed
flate2 = "1.0.30"
ndarray = "0.15.3"
rayon = "1.10.0"
serde_json = "1.0.117"
serde = {version="1.0.203", features = ["derive"]}
num_cpus = "1.16.0"
log = "0.4.21"
env_logger = "0.11.3"
chrono = "0.4.38"

# Optional: Add dependencies for additional functionalities (e.g., logging)

[[bin]]
name = "famli3"
path = "src/main.rs"
